# crawldesk

./: .gitignore  README.md  app.py  product_prd.md  pyproject.toml  recommendation.md  run.bat  run.ps1  run.sh
data/storage/: a.data  b.data  c.data  d.data  e.data  f.data  g.data  h.data  i.data  j.data  k.data  l.data  m.data  n.data  o.data  p.data  q.data  r.data  s.data  t.data  u.data  v.data  w.data  x.data  y.data  z.data
src/webcrawler/: __init__.py  app.py  config.py  main.py  models.py  types.py
src/webcrawler/crawler/: __init__.py  fetcher.py  rate_limiter.py  service.py  storage.py
src/webcrawler/index/: __init__.py  sqlite_storage.py  storage.py
src/webcrawler/queue/: __init__.py  memory_queue.py  scheduler.py
src/webcrawler/search/: __init__.py  service.py
src/webcrawler/status/: __init__.py  service.py
src/webcrawler/utils/: logger.py  persistence.py  url.py
src/webcrawler/web/: __init__.py  manager.py  server.py
tests/: test_index_local.py
